package net.paintco.paint;

public interface Drawable {
  int getLength();

  String getString();

  void setColor(String color);

  String getColor();

  void setString(String string);
}
